desktop-pwas: Don't intercept address bar and back/forward navigations

Pasting a link into the address bar and then navigating to it results in
a LINK navigation instead of a TYPED navigation. The transition
qualifier for the navigation will be FROM_ADDRESS_BAR so we use that to
distinguish it from regular link navigations.

Back/Forward navigations have the same type to the initial navigation
e.g. if the navigation to "a.com" was a LINK navigation then navigating
back or forward to "a.com" will be a LINK navigation as well. This could
cause us to incorrectly open an app window.

Bug: 789328, 782004
Change-Id: I5b53211bfbe144fc596ae7a1ac542e771e3c4f2b